--- a/content/01_journal/03_regression.qmd
+++ b/content/01_journal/03_regression.qmd
@@ -2,21 +2,29 @@
 title: "Regression and Statistical Inference"
 format:
   html:
-    self-contained: false
+    self-contained: true
 toc: true
 theme: "cosmo"
+execute: 
+  eval: true
+  warning: true
 ---
 
 
-# Read data
-```{r}
-#| output: asis
 # Load the Library
+```{r}
+#| echo: false
+#| output: false
+
 
 library(dplyr)
 library(tidyverse)
+```
+
 
 # Load the Data & Check Dimension
+```{r}
+#| output: asis
 car_prices <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/car_prices.rds")
 head(car_prices)
 dim(car_prices)
@@ -24,6 +32,7 @@ dim(car_prices)
 
 # data types do you see? How do numbers differ from strings regarding their data type?
 ```{r}
+
 #| output: asis
 car_prices <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/car_prices.rds")
 head(car_prices)
