--- a/content/01_journal/05_dag.qmd
+++ b/content/01_journal/05_dag.qmd
@@ -2,7 +2,7 @@
 title: "Directed Acyclic Graphs"
 format:
   html:
-    self-contained: false
+    self-contained: true
 author: "Stephanus Steven Halimkesuma"
 toc: true
 execute:
@@ -11,13 +11,10 @@ execute:
   warning: false
 ---
 
+
 ```{r}
-#| output: asis
-npm install -g yaml-lint
-# Load required libraries
-library(ggplot2)
-library(dplyr)
-library(tidyverse)
+#| output: false
+
 
 # Load the data
 customer_sat <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/customer_sat.rds")
