--- a/content/01_journal/05_dag.qmd
+++ b/content/01_journal/05_dag.qmd
@@ -2,7 +2,7 @@
 title: "Directed Acyclic Graphs"
 format:
   html:
-    self-contained: true
+    self-contained: false
 author: "Stephanus Steven Halimkesuma"
 toc: true
 execute:
