--- a/content/01_journal/06_rct.qmd
+++ b/content/01_journal/06_rct.qmd
@@ -1,7 +1,17 @@
 ---
 title: "Randomized Controlled Trials"
+format:
+  html:
+    self-contained: false
+author: "Stephanus Steven Halimkesuma"
+toc: true
+execute:
+  warning: false
 ---
 
+
+```{r}
+#| output: asis
 # Load required libraries
 library(ggplot2)
 library(dplyr)
@@ -29,3 +39,4 @@ summary(interaction_model)
 # Step 4: Logistic regression for binary outcome (purchase)
 logistic_regression <- glm(purchase ~ chatbot + mobile_device + previous_visit, data = abtest_online, family = "binomial")
 summary(logistic_regression)
+```
