--- a/content/01_journal/07_matching.qmd
+++ b/content/01_journal/07_matching.qmd
@@ -1,7 +1,17 @@
 ---
 title: "Matching and Subsclassifications"
+format:
+  html:
+    self-contained: false
+author: "Stephanus Steven Halimkesuma"
+toc: true
+execute:
+  warning: false
 ---
 
+
+```{r}
+#| output: asis
 # Load the Library
 
 library(Matching)
