--- a/content/01_journal/09_iv.qmd
+++ b/content/01_journal/09_iv.qmd
@@ -1,7 +1,17 @@
 ---
 title: "Instrumental Variables"
+format:
+  html:
+    self-contained: true
+author: "Stephanus Steven Halimkesuma"
+toc: true
+execute:
+  warning: false
 ---
 
+
+```{r}
+#| output: asis
 # Load Library
 library(tidyverse)
 library(rdd)
