--- a/content/01_journal/08_did.qmd
+++ b/content/01_journal/08_did.qmd
@@ -1,7 +1,17 @@
 ---
 title: "Difference-in-Differences"
+format:
+  html:
+    self-contained: true
+author: "Stephanus Steven Halimkesuma"
+toc: true
+execute:
+  warning: false
 ---
-  
+
+
+```{r}
+#| output: asis  
 # Load required libraries
 library(dplyr)
 library(tidyverse)
