--- a/content/01_journal/10_rdd.qmd
+++ b/content/01_journal/10_rdd.qmd
@@ -1,7 +1,17 @@
 ---
 title: "Regression Discontinuity"
+format:
+  html:
+    self-contained: true
+author: "Stephanus Steven Halimkesuma"
+toc: true
+execute:
+  warning: false
 ---
 
+
+```{r}
+#| output: asis
 # Install and load required packages
 
 library(tidyverse)
