--- a/content/01_journal/03_regression.qmd
+++ b/content/01_journal/03_regression.qmd
@@ -2,7 +2,7 @@
 title: "Regression and Statistical Inference"
 format:
   html:
-    self-contained: true
+    self-contained: false
 toc: true
 theme: "cosmo"
 execute: 
