--- a/content/01_journal/08_did.qmd
+++ b/content/01_journal/08_did.qmd
@@ -2,7 +2,7 @@
 title: "Difference-in-Differences"
 format:
   html:
-    self-contained: true
+    self-contained: false
 author: "Stephanus Steven Halimkesuma"
 toc: true
 execute:
@@ -11,12 +11,17 @@ execute:
 
 
 ```{r}
-#| output: asis  
-# Load required libraries
+#| output: false
+#| eval: false
+#| echo: false
+
 library(dplyr)
 library(tidyverse)
+```
 
 # Load the data
+```{r}
+#| output: asis  
 hospdd <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/hospdd.rds")
 
 head(hospdd)
