--- a/content/01_journal/03_regression.qmd
+++ b/content/01_journal/03_regression.qmd
@@ -2,18 +2,17 @@
 title: "Regression and Statistical Inference"
 format:
   html:
-    self-contained: false
+    self-contained: true
 toc: true
 theme: "cosmo"
-execute: 
-  warning: true
+editor: visual
 ---
 
 
 # Load the Library
 ```{r}
-#| echo: false
-#| output: false
+#| label: load-packages
+#| include: false
 
 
 library(dplyr)
